<resources>
    <string name="app_name">W-Print</string>
    <string-array name="orientation">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="paper_size">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>Letter-Size</item>
    </string-array>
    <string-array name="color">
        <item>B&amp;W</item>
        <item>Colored</item>
    </string-array>
    <string name="color_hint">Colored</string>
    <string name="colored_cost">Colored</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_print_options">Print Options</string>
    <string name="msg_did_not_receive2">Did not receive a code? </string>
    <string name="lbl_canon_pixma2">\@Canon_PIXMA</string>
    <string name="msg_depending_on_pa">Depending on paper size, and print color,  specify a print fee for each of the following paper sizes.</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
    <string name="msg_general_setting">General Settings</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="msg_uploading_plea">Uploading, please wait...</string>
    <string name="lbl_file_preview">File Preview</string>
    <string name="lbl_total_pages">Total Pages :</string>
    <string name="lbl_queued">Queued</string>
    <string name="lbl2">*********</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_phone">Phone </string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_about">About  </string>
    <string name="lbl_paired_printer">Paired Printer</string>
    <string name="msg_already_have_an">Already have an account? Login Here</string>
    <string name="lbl_remote_printer">Remote Printer</string>
    <string name="lbl_paper_size">Paper Size</string>
    <string name="msg_push_notificati">Push Notification</string>
    <string name="lbl_till_number">Till Number</string>
    <string name="lbl_colored">Colored</string>
    <string name="msg_stewiegriffin_g">stewiegriffin@gmail.com</string>
    <string name="lbl_phone_number">PHONE NUMBER</string>
    <string name="lbl_airtel">Airtel</string>
    <string name="msg_register_printe">Register Printer</string>
    <string name="lbl_print_color">Print Color</string>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="lbl_send_OTP">SEND OTP</string>
    <string name="lbl_done2">DONE</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_printers_owned2">Printers  Owned</string>
    <string name="lbl_darajani">Darajani</string>
    <string name="msg_copyright">Copyright      2023 W-Print, Dar es Salaam, Tanzania.</string>
    <string name="lbl_10_5_2023">10/5/2023</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_no_account">Don\'t have an account? Sign Up</string>
    <string name="lbl_printout_color">Printout Color</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_duplex_mode">Duplex Mode</string>
    <string name="lbl_cancel">CANCEL</string>
    <string name="msg_create_new_pass">Create new password</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_search_results">Search results</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_select_the_them">Select the theme that suits you.</string>
    <string name="msg_payment_success">Payment Successful! </string>
    <string name="msg_choose_payment">Choose Payment Method</string>
    <string name="msg_log_in_to_your">Log in to your existing W-Print account.</string>
    <string name="msg_your_file_has_b">Your file has been printed successfully.</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_21_04_2023">21/04/2023</string>
    <string name="msg_welcome_to_w_pr">Welcome to W-Print</string>
    <string name="lbl_hp_laserjet_pro">HP LaserJet Pro</string>
    <string name="lbl_printer_details">Printer Details</string>
    <string name="lbl_reset_password2">Reset password</string>
    <string name="lbl_reset_password3">    Reset Password</string>
    <string name="lbl_your_invoice">Invoice</string>
    <string name="lbl_sign_out">Sign out</string>
    <string name="lbl_000011233">#000011233</string>
    <string name="lbl_save_changes">Save Changes</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="lbl_brother_brlw">Brother BrLW</string>
    <string name="lbl_help_faq">Help / FAQ</string>
    <string name="lbl_try_again">TRY AGAIN</string>
    <string name="lbl_about2">About</string>
    <string name="lbl_portrait">Paper Orientation</string>
    <string name="lbl_paperSize">Paper Size</string>
    <string name="lbl_wlan_name_ssid">WLAN Name(SSID)</string>
    <string name="msg_already_have_an2">Already have an account?</string>
    <string name="lbl_printers_owned">Printers Owned</string>
    <string name="msg_enter_a_phone_n">Enter a phone number with which you will perform the required payment.</string>
    <string name="lbl_remote_printing">Remote Printing</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="msg_turn_on_wi_fi_t">Turn on Wi-Fi in Settings to scan.</string>
    <string name="msg_your_new_passwo">Your new password should be different from previously used passwords.</string>
    <string name="lbl_verify_code">Verify Code</string>
    <string name="msg_print_documents">Print documents, and photos directly from your device!</string>
    <string name="msg_save_print_opti">Save Print Options</string>
    <string name="lbl_password">Password</string>
    <string name="msg_all_print_jobs">All print jobs that you have carried out. Successful print jobs are denoted with a green tick whilst unsuccessful ones are denoted by a red-cross.</string>
    <string name="lbl_send_Email">Send Email</string>
    <string name="msg_location_addres">Location Address </string>
    <string name="msg_allow_fetch_to">Allow fetch to send push notifications to your device.</string>
    <string name="lbl_login_here">Login Here</string>
    <string name="msg_enter_the_phone">Enter the phone number associated with your account. We will send six-digit code to reset your password.</string>
    <string name="lbl_nearby_printing">Nearby Printing</string>
    <string name="lbl_vodacom">Vodacom</string>
    <string name="msg_did_not_receive">Did not receive a code? Resend code.</string>
    <string name="lbl_surveyprinter">\@surveyprinter</string>
    <string name="msg_terms_and_condi">Terms and Conditions</string>
    <string name="msg_this_option_may">This option may be used incase you need to send print jobs from an Android device to a remote computer connected printer over the internet. For this to work, both sending and receiving ends must be connected to the Internet.
To use this feature, you must be a registered user.</string>
    <string name="lbl_canon_pixma">Canon PIXMA</string>
    <string name="lbl_boomstationary2">\@boomstationary</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_category_info">Tap and hold Nearby Printer to add more details.</string>
    <string name="lbl_b_white">B/White</string>
    <string name="lbl_letter_size">Letter-Size</string>
    <string name="msg_unfortunately_t">Unfortunately the attempt to printing was unsuccessful.</string>
    <string name="lbl_tsh_0_00">Tsh 0.00</string>
    <string name="lbl_total_due">Total Due</string>
    <string name="lbl_set_print_fee">Set Print Fee</string>
    <string name="msg_paper_orientati">Paper Orientation</string>
    <string name="lbl_email2">Email</string>
    <string name="lbl_0768047808">0768047808</string>
    <string name="lbl_copies">Copies</string>
    <string name="lbl_nearby_details">Nearby Details</string>
    <string name="lbl_enter_email">Enter Email </string>
    <string name="lbl_enter_code">Enter Code Received </string>
    <string name="lbl_print_preview">Print Preview</string>
    <string name="lbl_file_name">File Name</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_before_you_star">Before you start printing, you will need to make sure that your printer is connected to a Wi- Fi network. also, make sure the printer is connected to the same wireless network as your Android device.
The first time you connect  to a printer you will have to download a driver plus document rendering libraries.</string>
    <string name="lbl_sign_up2">SIGN UP</string>
    <string name="lbl_8_pages">8 Pages</string>
    <string name="lbl_print_size">Print Size</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_proceed">Proceed </string>
    <string name="msg_create_an_accou">Create an account to access all functionalities</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_subtotals">Subtotals</string>
    <string name="lbl">.</string>
    <string name="msg_available_print">Available Printers</string>
    <string name="lbl_scan">Scan</string>
    <string name="msg_or_connect_usin">Or connect using</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_select_printer">Select Printer</string>
    <string name="lbl_nearby_printer2"> Nearby Printer</string>
    <string name="lbl_document">Document</string>
    <string name="lbl_print_history">Print History</string>
    <string name="lbl_email">Email </string>
    <string name="msg_your_print_job">Your print job has been queued.</string>
    <string name="lbl_payment_failed">Payment Failed!</string>
    <string name="lbl_pictures">Pictures</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_1">1</string>
    <string name="msg_print_job_statu">Print Job Status</string>
    <string name="msg_let_s_get_start">Let\u2019s Get Started!</string>
    <string name="lbl_cash">Cash</string>
    <string name="msg_printing_over_a">Printing over a nearby printer</string>
    <string name="msg_select_a_file_t">Select a file to print.</string>
    <string name="msg_ardhi_universit">Ardhi University</string>
    <string name="lbl_payment_details">Payment Details</string>
    <string name="msg_connect_with_ph">Connect with phone number</string>
    <string name="msg_info">You will receive an SMS message containing an OTP. Standard rates apply.</string>
    <string name="lbl_w_print">W-Print</string>
    <string name="lbl_search_results2">Search Results</string>
    <string name="lbl_printer">Printer</string>
    <string name="lbl_failed">Failed</string>
    <string name="msg_favorite_printe">Favorite Printers</string>
    <string name="lbl_tsh_1700">Tsh 1700</string>
    <string name="lbl_tigo">Tigo</string>
    <string name="msg_printing_over_t">Printing over the internet (remotely)</string>
    <string name="lbl_boom_stationary">BOOM Stationary</string>
    <string name="lbl_stewie_griffin">Stewie Griffin</string>
    <string name="lbl_theme">Theme</string>
    <string name="msg_terms_of_servic">Terms of Service</string>
    <string name="msg_must_be_at_leas">Must be at least 8 characters.</string>
    <string name="msg_printer_selecte">Printer Selected</string>
    <string name="msg_please_consider">Please consider using another payment method.</string>
    <string name="msg_both_passwords">Both passwords must match.</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_halotel">Halotel</string>
    <string name="lbl_nearby_printer">Nearby Printer</string>
    <string name="lbl_a2">A2</string>
    <string name="lbl_a3">A3</string>
    <string name="msg_confirm_invoic">Confirm  Invoice</string>
    <string name="lbl_test_page_pdf">Test Page.pdf</string>
</resources>