<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.example.wprintapp.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignIn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStacklogintoyour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_232pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_66pxv" android:layout_width="@dimen/_274pxh">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLogintoyour"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtLogintoyour}"
                style="@style/txtMontserratromanregular14" tools:text="@string/msg_log_in_to_your"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtWelcometoWPr"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25pxv"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtWelcometoWPr}"
                style="@style/txtMontserratromanbold24" tools:text="@string/msg_welcome_to_w_pr"/>
            <ImageView android:id="@+id/imageLogoSampleTwelve"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_222pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_width="@dimen/_244pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_logosample12}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logosample12"/>
        </FrameLayout>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_22pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={signInVM.signInModel.etLanguageValue}"
            android:textColorHint="@color/black_900_a5"
            style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etInteractivePas"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={signInVM.signInModel.etInteractivePasValue}"
            android:textColorHint="@color/black_900_a5"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtForgotPassword}"
            style="@style/txtMontserratromanmedium14_2" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignIn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_sign_in"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_sign_in"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOrconnectusin"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtOrconnectusin}"
            style="@style/txtMontserratromanregular14" tools:text="@string/msg_or_connect_usin"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPhoneNumber"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_phone_number"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_phone_number"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSignUpPage"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_68pxh"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            tools:text="@string/lbl_no_account"
            android:text="@{signInVM.signInModel.txtConfirmation}"
            style="@style/txtMontserratregular13"
            />
    </LinearLayout>
</layout>
