<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="createNewPasswordVM" type="com.example.wprintapp.modules.createnewpassword.data.viewmodel.CreateNewPasswordVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearCreateNewPass"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_27pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreatenewpass"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_52pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtCreatenewpass}"
            style="@style/txtLatobold24" tools:text="@string/msg_create_new_pass"/>
        <TextView android:id="@+id/txtYournewpasswo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_9pxh"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtYournewpasswo}"
            style="@style/txtMontserratromanregular13" tools:text="@string/msg_your_new_passwo"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etInteractivePas"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={createNewPasswordVM.createNewPasswordModel.etInteractivePasValue}"
            android:textColorHint="@color/black_900_a5"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTimeZone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtTimeZone}"
            style="@style/txtMontserratregular13" tools:text="@string/msg_must_be_at_leas"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etInteractivePasOne"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:text="@={createNewPasswordVM.createNewPasswordModel.etInteractivePasOneValue}"
            android:textColorHint="@color/black_900_a5"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTimeZoneOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{createNewPasswordVM.createNewPasswordModel.txtTimeZoneOne}"
            style="@style/txtMontserratregular13" tools:text="@string/msg_both_passwords"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnResetPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_reset_password"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_reset_password"/>
    </LinearLayout>
</layout>
